[package]
name = "quickie"
version = "0.2.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2021"
description = "A simple, low-level, and customizable implementation of a QUIC P2P node."
license = "CC0-1.0"
repository = "https://github.com/ljedrz/quickie"
documentation = "https://docs.rs/quickie"
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["p2p", "peer-to-peer", "networking"]
rust-version = "1.56"

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["lib"]

[features]
test = []

[dependencies]
async-trait = "0.1"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
once_cell = { version = "1", features = ["parking_lot"] }
parking_lot = "0.12"
quinn = "0.8"
quinn-proto = { version = "0.8", default-features = false }
tokio = { version = "1.14", features = ["io-util", "macros", "net", "parking_lot", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
rcgen = "0.9"
ring = "0.16"
rustls = { version = "0.20", default-features = false, features = ["quic"] }
tokio = { version = "1.14", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "parking_lot", "smallvec"] }
quickie = { path = ".", features = ["test"] } # a workaround to use the `test` feature in tests by default
