[package]
name = "quickie"
version = "0.6.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2021"
description = "A simple, low-level, and customizable implementation of a QUIC P2P node."
license = "CC0-1.0"
repository = "https://github.com/ljedrz/quickie"
documentation = "https://docs.rs/quickie"
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["p2p", "peer-to-peer", "networking"]
rust-version = "1.70"

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["lib"]

[features]
test = []

[dependencies]
async-trait = "0.1"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
parking_lot = "0.12"
quinn = "0.10"
quinn-proto = { version = "0.10.5", default-features = false }
tokio = { version = "1.24", features = ["io-util", "macros", "net", "parking_lot", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
deadline = "0.2"
humansize = "2"
libp2p = { version = "0.52", default-features = false, features = ["macros", "tls", "tokio"] }
libp2p-quic = { version = "0.9.2", features = ["tokio"] }
peak_alloc = "0.2"
rcgen = "0.11"
ring = "0.16"
rustls = { version = "0.21", default-features = false, features = ["dangerous_configuration", "quic"] }
tokio = { version = "1.24", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "parking_lot", "smallvec"] }
quickie = { path = ".", features = ["test"] } # a workaround to use the `test` feature in tests by default
